# TinyNeuralNetwork

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  Dockerfile  README.md  README_zh-CN.md  activate.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: full-test-tmp.yml  full-test.yml  smoke-test.yml  unit-test.yml
contrib/tflite2tf/: README.md  tflite2tf.py
docs/: FAQ.md  FAQ_zh-CN.md  op_matrix.md  quantization_support.md
examples/: .gitignore  quick_start_for_beginner.py  quick_start_for_expert.py
examples/converter/: README.md  README_zh-CN.md  convert.py  convert1.py  convert_and_compare.py  convert_from_json.py  dynamic.py  dynamic_with_selection.py  onnx_export.py  onnx_trt_compare.py
examples/converter/in8/: saved_model.pb  tfint8.py
examples/mixed_qat/: mobilenet_mixed_qat.py  qat.py
examples/models/cifar10/: mobilenet.py
examples/pruner/admm/: README.md  README_zh-CN.md  admm_prune.py  config.yml
examples/pruner/identity/: README.md  README_zh-CN.md  identity_prune.py
examples/pruner/netadapt/: README.md  README_zh-CN.md  config.yml  netadapt_prune.py
examples/pruner/oneshot/: README.md  README_zh-CN.md  config.yml  oneshot_prune.py
examples/qat/: README.md  README_zh-CN.md  bf16.py  dynamic.py  post.py  qat.py
examples/quantization/: README.md  README_zh-CN.md  bf16.py  dynamic.py  layerwise_ptq_analysis.py  onnx_qat.py  post.py  post1.py  post_error_anaylsis.py  post_per_layer.py  ptq_with_dynamic_q_lstm.py  qat.py  rep_qat.py  selective_q.py  trt_qat.py  w16_post.py  w16_post_fq.py
examples/quantization/rep_quantization/: README.md  README_zh-CN.md  rep_ptq.py  rep_qat.py
examples/tracer/: README.md  README_zh-CN.md  tracer_example.py
models/: efficientnet_v2_l.py  efficientnet_v2_m.py  efficientnet_v2_s.py  efficientnet_v2_xl.py  hrnet125.py  mobilenet_v1.py  res2net101_26w_4s.py  rexnetv1.py  yolov4.py
scripts/: gen_op_docs.py  gen_quantized_docs.py
tests/: codegen_test.py  common_utils.py  converter_op1_test.py  converter_op_test.py  converter_optimizer_test.py  converter_qat_test.py  converter_test.py  converter_unit_test.py  cross_layer_equalization_test.py  import_test.py  modifier_models_test.py  modifier_prune_test.py  modifier_speed_test.py  modifier_test.py  modifier_test_models.py  modifier_torchvision_test.py  qat_module_test.py  quantizer_test.py  test_run.py  tracer_test.py
tinynn/converter/: README.md  README_zh-CN.md  __init__.py  base.py
tinynn/converter/operators/: __init__.py  base.py  graph.py  op_version.py  (+3 more)
tinynn/graph/: README.md  README_zh-CN.md  _utils.py  interop.py  masker.py  modifier.py  rewriter.py  tracer.py
tinynn/llm_quant/: README.md  llama.py  modules.py  util.py
tinynn/prune/: README.md  README_zh-CN.md  __init__.py  admm_pruner.py  base_pruner.py  identity_pruner.py  netadapt_pruner.py  oneshot_pruner.py
tinynn/util/: bn_rebuild.py  bn_restore.py  cifar10.py  converter_util.py  cross_layer_equal.py  distributed_util.py  quantization_analysis_util.py  train_util.py  util.py
tutorials/: .gitignore
tutorials/model_conversion/: README.md  basic.ipynb  options.ipynb
tutorials/pruning/: README.md  basic.ipynb
tutorials/quantization/: README.md  basic.ipynb
(+65 files in other folders)
