[build-system]
requires = ["setuptools>=40.8.0", "wheel", "pip"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = 120
experimental-string-processing = true
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
^/.git
| ^/docs
| ^/examples/qat/out/
| ^/examples/tracer/out
| ^/examples/mixed_qat/mobilenet_mixed_qat\.py
| ^/examples/models
| ^/models
| ^/myenv
| ^/tests/models/
| ^/tests/out/
| ^/build/
| ^/debugging/
| ^/tinynn/converter/operators/tflite/generated_ops\.py
| ^/tinynn/converter/schemas/tflite/schema_generated\.py
| ^/tinynn/converter/schemas/torch/aten_schema\.py
| ^/tinynn/converter/schemas/torch/quantized_schema\.py
| ^/tinynn/converter/schemas/torch/torchvision_schema\.py
'''

[tool.ruff]
line-length = 120

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "debugging",
    "examples/models",
    "examples/mixed_qat/mobilenet_mixed_qat.py",
    "out",
    "models",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py39"

[tool.ruff.per-file-ignores]
"tinynn/converter/schemas/torch/*.py" = ["E501"]
"tinynn/converter/schemas/tflite/schema_generated.py" = ["E501"]
"tinynn/converter/operators/torch/*.py" = ["F403", "F405"]
"tinynn/converter/operators/tflite/*.py" = ["F403", "F405"]
"tinynn/prune/__init__.py" = ["F403"]
"examples/*.py" = ["E402"]
"__init__.py" = ["F401", "F403"]
"tests/import_test.py" = ["F401"]
"tutorials/quantization/basic.ipynb" = ["F811", "F401"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
